Add devise bootstrap views and style Login and Signup pages

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,13 +1,16 @@
 @import 'bootstrap/dist/css/bootstrap';
 
+
 .navbar {
 	background-color: #FDF6EA !important;
 }
 
+/*
 .navbar-brand {
-	font-size: 3rem;
+	font-size: 2rem;
 }
+*/
 
 h1 {
-	color: red;
+	color: black;
 }
